# flutter_lazy

./: .gitignore  CLEAN_ARCHITECTURE.md  Cargo.toml  README.md  RELEASE_NOTES.md  install.sh  sample_typeface.css
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md  MIGRATION_GUIDE.md  README.md  TEMPLATES.md  USER_GUIDE.md  VALIDATION.md
lib/features/test_feat/: di.dart  router.dart
lib/features/test_feat/cubits/: test_feat_cubit.dart  test_feat_state.dart
src/: generator.rs  main.rs  main.rs.bak.corrupt  main.rs.new  swagger.rs  utils.rs  validation.rs  validation_tests.rs
src/features/: auth.rs  main_page.rs  mod.rs  notifications.rs
templates/: app.dart.tmpl  di.dart.tmpl  router.dart.tmpl
templates/assets/firebase/dev/: firebase-config.js
templates/assets/firebase/prod/: firebase-config.js
templates/assets/firebase/stage/: firebase-config.js
templates/assets/i18n/: en.json
templates/common/: app.dart  di.dart  flavors.dart  main_flavor.dart.tmpl  router.dart
templates/common/app_structure/config/: app_constants.dart.tmpl  app_routes.dart.tmpl  app_styles.dart.tmpl  app_theme.dart.tmpl
templates/common/config/: theme.dart
templates/common/models/: failure.dart
templates/features/auth/: di.dart.tmpl  router.dart.tmpl
templates/features/common/: di.dart.tmpl  router.dart.tmpl
templates/features/main_page/: di.dart.tmpl  router.dart.tmpl
templates/features/notifications/: README.md  di.dart.tmpl  router.dart.tmpl
templates/validation/: api_feature_validation.yml  feature_validation.yml  project_validation.yml
(+112 files in other folders)
